# agraffe

./: Makefile  README.md  mypy.ini  pyproject.toml
agraffe/: __init__.py
